feature - init back finances
