# backend/handler/finances/editTransaction.go
@@ -1,0 +1,72 @@
+package finances
+
+import (
+	"github.com/EduHSilva/routine/helper"
+	"github.com/EduHSilva/routine/schemas/finances"
+	"github.com/gin-gonic/gin"
+	"github.com/nicksnyder/go-i18n/v2/i18n"
+	"net/http"
+)
+
+// UpdateTransactionHandler
+// @BasePath /api/v1
+// @Summary Update a transaction
+// @Description Update the title or value of transaction
+// @Tags Finances
+// @Accept json
+// @Produce json
+// @Param id query uint64 true "id"
+// @Param request body UpdateTransactionRequest true "Request body"
+// @Success 200 {object} ResponseCategory
+// @Failure 400 {object} helper.ErrorResponse
+// @Failure 401 {object} helper.ErrorResponse
+// @Security ApiKeyAuth
+// @Param x-access-token header string true "Access token"
+// @Router /finances/transactions [PUT]
+func UpdateTransactionHandler(ctx *gin.Context) {
+	request := UpdateTransactionRequest{}
+
+	getI18n, _ := ctx.Get("i18n")
+
+	if err := ctx.BindJSON(&request); err != nil {
+		logger.ErrF("validation error: %v", err.Error())
+		helper.SendError(ctx, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	if err := request.Validate(); err != nil {
+		logger.ErrF("validation error: %v", err.Error())
+		helper.SendError(ctx, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	id := ctx.Query("id")
+
+	if id == "" {
+		helper.SendError(ctx, http.StatusBadRequest,
+			helper.ErrParamIsRequired("id", "query param").Error())
+		return
+	}
+
+	transaction := &finances.Transaction{}
+
+	if err := db.First(&transaction, id).Error; err != nil {
+		helper.SendErrorDefault(ctx, http.StatusNotFound, getI18n.(*i18n.Localizer))
+		return
+	}
+
+	if request.Title != "" {
+		transaction.Title = request.Title
+	}
+
+	if request.Value != 0 {
+		transaction.Value = request.Value
+	}
+
+	if err := db.Save(&transaction).Error; err != nil {
+		logger.ErrF("error updating: %s", err.Error())
+		helper.SendError(ctx, http.StatusInternalServerError, err.Error())
+	}
+
+	helper.SendSuccess(ctx, ConvertTransactionToTransactionResponse(transaction))
+}
