# backend/handler/finances/handler.go
@@ -1,0 +1,16 @@
+package finances
+
+import (
+	"github.com/EduHSilva/routine/config"
+	"gorm.io/gorm"
+)
+
+var (
+	logger *config.Logger
+	db     *gorm.DB
+)
+
+func InitHandler() {
+	logger = config.GetLogger("handler finances")
+	db = config.GetDB()
+}
