# backend/schemas/finances/transaction.go
@@ -2,6 +2,7 @@ package finances
 
 import (
 	"github.com/EduHSilva/routine/schemas"
+	"github.com/EduHSilva/routine/schemas/enums"
 	"gorm.io/gorm"
 	"time"
 )
@@ -12,6 +13,7 @@ type Transaction struct {
 	Income     bool
 	Value      float64
 	Date       time.Time
+	Frequency  enums.Frequency
 	CategoryID uint             `gorm:"not null"`
 	Category   schemas.Category `gorm:"foreignKey:CategoryID"`
 	UserID     uint             `gorm:"not null"`
